<?xml version="1.0" encoding="utf-8"?>
<!--
 - DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
 -                    Version 2, December 2004
 - 
 - Copyright (C) 2004 Sam Hocevar <sam@hocevar.net>
 - 
 - Everyone is permitted to copy and distribute verbatim or modified
 - copies of this license document, and changing it is allowed as long
 - as the name is changed.
 - 
 -            DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
 -   TERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION
 - 
 - 0. You just DO WHAT THE FUCK YOU WANT TO.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_switch"
        android:orderInCategory="80"
        android:showAsAction="never"
        android:title="@string/menu_switch"/>
    <item
        android:id="@+id/menu_profile_settings"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/menu_profile_settings"/>
    <item
        android:id="@+id/menu_global_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_global_settings"/>

</menu>