<!--
 - DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
 -                    Version 2, December 2004
 - 
 - Copyright (C) 2004 Sam Hocevar <sam@hocevar.net>
 - 
 - Everyone is permitted to copy and distribute verbatim or modified
 - copies of this license document, and changing it is allowed as long
 - as the name is changed.
 - 
 -            DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
 -   TERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION
 - 
 - 0. You just DO WHAT THE FUCK YOU WANT TO.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainConsole"
    android:orientation="vertical" >
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_selector_username"/>
        
        <EditText 
            android:id="@+id/profile_selector_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_selector_password"/>
        
        <EditText 
            android:id="@+id/profile_selector_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_selector_address"/>
        
        <EditText 
            android:id="@+id/profile_selector_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"/>
        
        <Button 
            android:id="@+id/profile_selector_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_selector_login"/>
    

</LinearLayout>